Bug 506445 - Orca Screenreader uses wrong keyboard bindings for structural navigation on websites
Summary: Orca Screenreader uses wrong keyboard bindings for structural navigation on w...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: 6.4.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2025-07-01 15:41 UTC by Arkadiusz Ryszard Świętnicki
Modified: 2025-07-03 12:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arkadiusz Ryszard Świętnicki 2025-07-01 15:41:26 UTC
SUMMARY
The Orca Screenreader incorrectly binds modifier keys to structural navigation keys on websites

STEPS TO REPRODUCE
1. With Orca enabled, open any website with Mozilla Firefox or Chromium.
2. Press Orca Key + H to turn on learn mode
3. Press modifier keys by thgemselves (left CTRL. left shift, left alt, right control, right shift, right alt)

OBSERVED RESULT
Below is the list of bindings Orca ssigns to those actions
- Left CTRL: goes to the last live region that made an announcement
- Left Shift: Go to the next image
- Left alt: goes to the next button.
- Right shift: Go to next combo box.
- Enter: go to next table.


EXPECTED RESULT
Modifier keys, by themselves never had actions bound to them. I expect the modifiers, especially shift to behave like it always did, allowing m to reverse structural navigation.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 43
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.16.0-0.rc3.250627g67a993863163.35.fc43.aarch64 (64-bit)
Graphics Platform: Wayland
Processors: 8
Memory: 8 GiB of RAM (7.7 GiB usable)
Graphics Processor: llvmpipe
Manufacturer: Parallels International GmbH.
Product Name: Parallels ARM Virtual Machine
System Version: 0.1

ADDITIONAL INFORMATION
Orca version: 48.6
Comment 1 Bug Janitor Service 2025-07-01 17:16:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7858
Comment 2 Nicolas Fella 2025-07-01 22:26:32 UTC
Git commit 5ba6279b1b2e16b38d0addf6241b770d0cd4adac by Nicolas Fella.
Committed on 01/07/2025 at 17:15.
Pushed by nicolasfella into branch 'master'.

A11yKeyboardMonitor: Fix sending keycodes to AT

processKey receives scancodes, we need to convert to keycodes when emitting KeyEvent

M  +6    -5    src/a11ykeyboardmonitor.cpp

https://invent.kde.org/plasma/kwin/-/commit/5ba6279b1b2e16b38d0addf6241b770d0cd4adac
Comment 3 Nicolas Fella 2025-07-02 02:17:37 UTC
Git commit d51476569d24c863d875f96e26d555e96a2bcd23 by Nicolas Fella.
Committed on 01/07/2025 at 22:27.
Pushed by nicolasfella into branch 'Plasma/6.4'.

A11yKeyboardMonitor: Fix sending keycodes to AT

processKey receives scancodes, we need to convert to keycodes when emitting KeyEvent


(cherry picked from commit 5ba6279b1b2e16b38d0addf6241b770d0cd4adac)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +6    -5    src/a11ykeyboardmonitor.cpp

https://invent.kde.org/plasma/kwin/-/commit/d51476569d24c863d875f96e26d555e96a2bcd23