A11yKeyboardMonitor: Fix sending keycodes to AT

processKey receives scancodes, we need to convert to keycodes when emitting KeyEvent

BUG: 506445