src/a11ykeyboardmonitor.cpp
@@ -46,16 +46,17 @@ bool A11yKeyboardMonitor::processKey(uint32_t key, KeyboardKeyState state, std::
     const auto text = input()->keyboard()->xkb()->toString(keysym);
     const quint32 unicode = text.isEmpty() ? 0 : text.at(0).unicode();
     const bool released = state == KeyboardKeyState::Released;
+    const auto keycode = key + 8;
 
     for (auto [name, data] : m_clients.asKeyValueRange()) {
         if (data.grabbed) {
-            emitKeyEvent(name, released, mods, keysym, unicode, key);
+            emitKeyEvent(name, released, mods, keysym, unicode, keycode);
         }
 
         // if any of the grabbed modifiers is currently down, grab the key
         for (const auto grabbedMod : data.modifiers) {
             if (grabbedMod != keysym && data.pressedModifiers.contains(grabbedMod)) {
-                emitKeyEvent(name, released, mods, keysym, unicode, key);
+                emitKeyEvent(name, released, mods, keysym, unicode, keycode);
                 return true;
             }
         }
@@ -83,19 +84,19 @@ bool A11yKeyboardMonitor::processKey(uint32_t key, KeyboardKeyState state, std::
                 data.pressedModifiers.insert(keysym);
             }
 
-            emitKeyEvent(name, released, mods, keysym, unicode, key);
+            emitKeyEvent(name, released, mods, keysym, unicode, keycode);
             return true;
         }
 
         for (const KeyStroke &stroke : std::as_const(data.keys)) {
             if (mods == stroke.modifiers && stroke.keysym == keysym) {
-                emitKeyEvent(name, released, mods, keysym, unicode, key);
+                emitKeyEvent(name, released, mods, keysym, unicode, keycode);
                 return true;
             }
         }
 
         if (data.watched) {
-            emitKeyEvent(name, released, mods, keysym, unicode, key);
+            emitKeyEvent(name, released, mods, keysym, unicode, keycode);
         }
     }
 
